Table activity {
    as2_sa_id int [pk, increment]
    as2_sa_platform_id text
    as2_sa_app_id text [not null]
    as2_sa_start_utc_ms int [not null]
    as2_sa_end_utc_ms int [not null]
    as2_sa_active_duration_ms int [not null]
    as2_sa_type text [not null]
    as2_sa_user_category text
    as2_sa_is_deleted int [not null]
    as2_sa_is_dirty int [not null]
    as2_sa_last_modified_ms int [not null]
    as2_sa_change_tokens text [not null]
    as2_sa_metrics text [not null]
    as2_sa_sources text [not null]
}

Table activity_metric_group {
    as2_mg_id int [pk, increment]
    as2_mg_activity_id int [not null]
    as2_mg_app_id text
    as2_mg_is_dirty int [not null]
    as2_mg_metric_type text [not null]
    as2_mg_unit text [not null]
    as2_mg_source text [not null]
}

Table activity_moment {
    as2_m_id int [pk, increment]
    as2_m_activity_id int [not null]
    as2_m_app_id text
    as2_m_type text [not null]
    as2_m_value text [not null]
    as2_m_source text [not null]
    as2_m_timestamp_utc_ms int [not null]
}

Table activity_polyline {
    as2_p_id int [pk, increment]
    as2_p_activity_id int [not null]
    as2_p_source text [not null]
    as2_p_app_id text [not null]
    as2_p_encoded_polyline text [not null]
    as2_p_type text [not null]
}

Table activity_summary {
    as2_s_id int [pk, increment]
    as2_s_activity_id int [not null]
    as2_s_app_id text
    as2_s_metric_type text [not null]
    as2_s_source text [not null]
    as2_s_type text [not null]
    as2_s_value real [not null]
}

Table activity_tag {
    as2_t_id int [pk, increment]
    as2_t_activity_id int [not null]
    as2_t_type text [not null]
    as2_t_value text
}

Table fullpower_activity_link {
    fpal_id int [pk, increment]
    fpal_local_activity_id int [not null]
    fpal_fullpower_id int [not null]
}

Ref: activity.as2_sa_id < activity_metric_group.as2_mg_activity_id
Ref: activity.as2_sa_id < activity_moment.as2_m_activity_id
Ref: activity.as2_sa_id < activity_polyline.as2_p_activity_id
Ref: activity.as2_sa_id < activity_summary.as2_s_activity_id
Ref: activity.as2_sa_id < activity_tag.as2_t_activity_id
Ref: activity.as2_sa_id < fullpower_activity_link.fpal_local_activity_id

Table activity_raw_metric {
    as2_rm_id int [pk, increment]
    as2_rm_metric_group_id int [not null]
    as2_rm_end_utc_ms int [not null]
    as2_rm_start_utc_ms int [not null]
    as2_rm_value real [not null]
}

Ref: activity_metric_group.as2_mg_id < activity_raw_metric.as2_rm_metric_group_id